<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    tools:context=".UserLoginActivity">

    <ImageView
        android:id="@+id/qbyteLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:contentDescription="@string/logoImg"
        android:src="@drawable/qbyte_logo" />

    <TextView
        android:id="@+id/userText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/qbyteLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:gravity="center"
        android:text="@string/create_user_account"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        android:letterSpacing=".2"/>


    <EditText
        android:id="@+id/userName"
        android:layout_width="312dp"
        android:layout_height="50dp"
        android:layout_below="@+id/userText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:autofillHints="admin-name"
        android:background="@drawable/input_bg"
        android:hint="@string/enter_your_fullname"
        android:inputType="text"
        android:textColorHint="@color/black"
        />

    <EditText
        android:id="@+id/userEmail"
        android:layout_width="312dp"
        android:layout_height="50dp"
        android:layout_below="@+id/userName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:background="@drawable/input_bg"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/black"
        android:autofillHints="email"/>

    <EditText
        android:id="@+id/userPass"
        android:layout_width="312dp"
        android:layout_height="50dp"
        android:layout_below="@+id/userEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:background="@drawable/input_bg"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="@color/black"
        android:autofillHints="password"/>

    <EditText
        android:id="@+id/confirmPass"
        android:layout_width="312dp"
        android:layout_height="50dp"
        android:layout_below="@+id/userPass"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:background="@drawable/input_bg"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textColorHint="@color/black"
        android:autofillHints="password"/>

    <Button
        android:id="@+id/userRegisterButton"
        android:layout_width="203dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/confirmPass"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:background="@drawable/orange_button_bg"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold" />


</RelativeLayout>