<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    tools:context=".UserAccountActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:src="@drawable/roundedbackround"/>

    <ImageView
        android:id="@+id/qbyteLogo"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:src="@drawable/qbyte_logo"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/qbyteLogo"
        android:text="@string/account_information"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/black" />


    <!-- CardView to show user details -->
    <androidx.cardview.widget.CardView
        android:id="@+id/user_details_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_margin="30dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="6dp"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <!-- Full Name -->
            <TextView
                android:id="@+id/full_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Full Name: John Doe"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@android:color/black" />

            <!-- Email -->
            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Email: john.doe@example.com"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:layout_marginTop="10dp" />

            <!-- Account Created Date -->
            <TextView
                android:id="@+id/account_created_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:layout_marginTop="10dp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/user_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_details_card"
        android:layout_centerHorizontal="true"
        android:text="@string/logout"
        android:background="@drawable/logout_button_bg"
        android:textColor="@color/white"/>

</RelativeLayout>
